# gpm

./: Cargo.toml
.github/workflows/: rust-build-deploy.yml  rust-version-bump-check.yml
src/: app.rs  config.rs  main.rs  multi_input.rs  project_item.rs  screen.rs  switch_screen.rs
