[package]
name = "abn-gpm"
version = "1.0.0"
edition = "2024"
authors = ["Anna Singleton<annabeths111@gmail.com>"]
repository = "https://github.com/anna-singleton/gpm"
description = "A workflow tool for managing git worktrees from your terminal"
license = "MIT"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
confy = { version = "1.0.0", features = ["toml"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
tui-input = "0.14.0"
tui-tree-widget = "0.23.1"
uuid = "1.17.0"
